...
                    voucherId,
                    userId
                )

            } catch (e: HttpException) {
                createError = when (e.code()) {
                    400 -> "Lugares inválidos ou já ocupados."
                    404 -> "Sessão não encontrada."
                    401 -> "Sessão expirada. Faz login novamente."
                    else -> "Erro no servidor (${e.code()})."
                }
            } catch (_: IOException) {
                createError = "Sem ligação à internet."
...
